[package]
name = "dao-assets-contract"
version = "1.0.0"
authors = ["chp"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.2", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
] }
dao-assets-extension = { version = "1.0.0", path = "../dao-assets-extension", default-features = false }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "dao-assets-extension/std"]
ink-as-dependency = []