[package]
name = "vote-escrow-contract"
version = "1.0.0"
authors = ["cuteolaf"]
edition = "2021"
publish = false

# https://github.com/rust-lang/rust/issues/78744
[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false

[dependencies]
ink = { version = "4.2", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
] }
vote-escrow-extension = { version = "1.0.0", path = "../vote-escrow-extension", default-features = false }

[dev-dependencies]
ink_e2e = "4.2.1"
dao-assets-contract = { path = "../dao-assets-contract", default-features = false, features = [
    "ink-as-dependency",
] }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "vote-escrow-extension/std",
    "dao-assets-contract/std",
]
ink-as-dependency = []
e2e-tests = []
