[package]
name = "genesis-dao-contract"
version = "0.1.0"
edition = "2021"
authors = ["add your name here"]

[dependencies]
ink = { version = "4.2", default-features = false }
ink_prelude = { version = "4.2", default-features = false }
ink_primitives = { version = "4.2", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

genesis-dao-contract-trait = { package = "genesis-dao-contract-trait", default-features = false, path = "../genesis-dao-contract-trait" }

[dev-dependencies]
ink_e2e = "4.2"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
