[package]
name = "plugins"
version = "0.1.0"
edition = "2021"
authors = ["chp"]

[dependencies]
ink = { version = "4.2", default-features = false }
ink_primitives = { version = "4.2", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []